adding logic so new task form won't create if task is blank (falsy)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					display: inline-block;
 					min-width: 200px;
 				}
-				.task button { 
+				.task button, #submitTask button { 
 					margin: 0 20px; 
 					width: 75px; 
 					background: none;
